<resources>
    <string name="app_name">project_intent</string>
    <string name="welcome_to_dream_page">welcome to dream page</string>
    <string name="welcome_electronic_area">welcome electronic area</string>
    <string name="select_the_phone_you_want">select the phone you want :</string>
    <string name="samsung">Samsung</string>
    <string name="samsungz">Samsung..........</string>
    <string name="iphone">iphone..............</string>
    <string name="Iphone">Iphone</string>
    <string name="realme1"><![CDATA[<<<<<< realme]]></string>
    <string name="rog1"><![CDATA[<<<<<< Rog]]></string>
    <string name="blackshark1"><![CDATA[<<<<<< Blackshark]]></string>
    <string name="iphone1"><![CDATA[<<<<<< Iphone]]></string>
    <string name="samsung1"><![CDATA[<<<<<< samsung]]></string>
    <string name="asus_tuf_dash15">Asus Tuf Dash15</string>
    <string name="msi_f63"><![CDATA[<<<<<< Msi F63]]></string>
    <string name="acer_nitro5"><![CDATA[<<<<<< Acer Nitro5]]></string>
    <string name="lenovo_legion"><![CDATA[<<<<<< Lenovo Legion]]></string>
    <string name="macbook_pro_13"><![CDATA[<<<<<< MacBook Pro 13]]></string>
    <string name="asus_tuf_dash151"><![CDATA[<<<<<< Asus Tuf Dash15]]></string>
    <string name="select_the_laptop_you_want">Select The Laptop You Want :</string>
    <string name="select_the_phone_you_want1">Select The Phone You Want :</string>
    <string name="select_the_playstation_you_want">Select The Playstation You Want :</string>
    <string name="playstation_5"><![CDATA[<<<<<<PlayStation 5]]></string>
    <string name="playstation_4"><![CDATA[<<<<<<PlayStation 4]]></string>
    <string name="playstation_3"><![CDATA[<<<<<<PlayStation 3]]></string>
    <string name="playstation_2"><![CDATA[<<<<<<PlayStation 2]]></string>
    <string name="playstation_1"><![CDATA[<<<<<<PlayStation 1]]></string>
    <string name="iphone_15_pro_max">Iphone 15 Pro Max</string>
    <string name="harga_iphone_15_pro_max_256gb_rp24_999_000_harga_iphone_15_pro_max_512gb_rp29_999_000_harga_iphone_15_pro_max_1tb_rp33_999_000">Harga iPhone 15 Pro Max 256GB: Rp24.999.000 Harga iPhone 15 Pro Max 512GB: Rp29.999.000 Harga iPhone 15 Pro Max 1TB: Rp33.999.000</string>
    <string name="desain_dan_layar_layar_oled_6_7_inci_dengan_tingkat_kecerahan_mencapai_2_000_nits_dan_dilindungi_oleh_ceramic_shield_bingkai_terbuat_dari_titanium_grade_5_memberikan_ringan_dan_ketahanan_ekstra_tersedia_dalam_tiga_pilihan_warna_putih_biru_dan_hitam_performa_dan_fotografi_chip_a17_pro_bionic_dengan_arsitektur_3nm_untuk_peningkatan_performa_sebesar_10_kamera_utama_48mp_dengan_sensor_lebih_besar_kemampuan_telefoto_canggih_dan_kemampuan_merekam_video_hingga_4k">Desain dan Layar Layar OLED 6,7 inci dengan tingkat kecerahan mencapai 2.000 nits dan dilindungi oleh Ceramic Shield. Bingkai terbuat dari titanium grade 5, memberikan ringan dan ketahanan ekstra. Tersedia dalam tiga pilihan warna: putih, biru, dan hitam. Performa dan Fotografi chip A17 Pro Bionic dengan arsitektur 3nm untuk peningkatan performa sebesar 10%. Kamera utama 48MP dengan sensor lebih besar, kemampuan telefoto canggih, dan kemampuan merekam video hingga 4K.</string>
    <string name="black_shark_3_pro">Black Shark 3 Pro</string>
    <string name="hp_xiaomi_black_shark_3_pro_memiliki_ukuran_layar_sebesar_7_1_inci_dengan_resolusi_1440_x_3120pixels_berteknologi_amoled_sehingga_hp_ini_mempunyai_berat_sebesar_253g_serta_mempunyai_material_berupa_aluminium_dengan_dimensi_177_8_x_83_3_x_10_1mm_kinerja_hp_xiaomi_black_shark_3_pro_didukung_dengan_prosesor_qualcomm_sm8250_snapdragon_865_7_nm_octa_core_yang_dapat_mendukung_pengguna_dalam_mengoprasikan_hp_ini_kapasitas_baterai_yang_dimiliki_hp_xiaomi_black_shark_3_pro_ini_adalah_4720mah_yang_telah_mendukung_fast_charging_kualitas_kamera_belakang_xiaomi_black_shark_3_pro_adalah_64_13_5mp_serta_memiliki_kamera_depan_sebesar_20mp_dengan_type_single_kamera_resolusi_yang_dihasilkan_oleh_kamera_hp_xiaomi_black_shark_3_pro_adalah_full_hd">HP Xiaomi Black Shark 3 Pro memiliki ukuran layar sebesar 7.1 inci dengan resolusi 1440 x 3120pixels berteknologi AMOLED. Sehingga HP ini mempunyai berat sebesar 253g serta mempunyai material berupa Aluminium dengan dimensi 177.8 x 83.3 x 10.1mm. Kinerja HP Xiaomi Black Shark 3 Pro didukung dengan prosesor Qualcomm SM8250 Snapdragon 865 (7 nm ) Octa Core yang dapat mendukung pengguna dalam mengoprasikan HP ini. Kapasitas baterai yang dimiliki HP Xiaomi Black Shark 3 Pro ini adalah 4720mAh yang telah mendukung Fast Charging. Kualitas kamera belakang Xiaomi Black Shark 3 Pro adalah 64 13 5MP serta memiliki kamera depan sebesar 20MP dengan type Single Kamera. Resolusi yang dihasilkan oleh kamera HP Xiaomi Black Shark 3 Pro adalah Full HD.</string>
    <string name="harga_rp_14_010_500_rp_16_510_500">Harga: Rp. 14.010.500 - Rp. 16.510.500</string>
    <string name="harga_rp_16_009_500_rp_17_009_500">Harga: Rp. 16.009.500 - Rp. 17.009.500</string>
    <string name="asus_phone_rog_7_ultimate">Asus Phone ROG 7 Ultimate</string>
    <string name="hp_asus_rog_phone_7_ultimate_memiliki_ukuran_layar_standar_dengan_resolusi_2448_x_1080pixels_berteknologi_amoled_sehingga_hp_ini_mempunyai_berat_sebesar_239g_serta_mempunyai_material_berupa_aluminium_kaca_dengan_dimensi_173_x_77_x_10_3mm_kinerja_hp_asus_rog_phone_7_ultimate_didukung_dengan_prosesor_qualcomm_sm8550_ab_snapdragon_8_gen_2_4_nm_octa_core_yang_dapat_mendukung_pengguna_dalam_mengoprasikan_hp_ini_kapasitas_baterai_yang_dimiliki_hp_asus_rog_phone_7_ultimate_ini_adalah_6000mah_yang_telah_mendukung_reverse_charging_kualitas_kamera_utama_asus_rog_phone_7_ultimate_adalah_50_13_5mp_serta_memiliki_kamera_selfie_sebesar_32mp_dengan_type_triple_kamera_resolusi_yang_dihasilkan_oleh_kamera_hp_asus_rog_phone_7_ultimate_adalah_full_hd">HP ASUS ROG Phone 7 Ultimate memiliki ukuran layar standar dengan resolusi 2448 x 1080pixels berteknologi AMOLED. Sehingga HP ini mempunyai berat sebesar 239g serta mempunyai material berupa Aluminium, Kaca dengan dimensi 173 x 77 x 10.3mm. Kinerja HP ASUS ROG Phone 7 Ultimate didukung dengan prosesor Qualcomm SM8550-AB Snapdragon 8 Gen 2 (4 nm) Octa Core yang dapat mendukung pengguna dalam mengoprasikan HP ini. Kapasitas baterai yang dimiliki HP ASUS ROG Phone 7 Ultimate ini adalah 6000mAh yang telah mendukung Reverse Charging. Kualitas kamera utama ASUS ROG Phone 7 Ultimate adalah 50 + 13 + 5MP serta memiliki kamera selfie sebesar 32MP dengan type Triple Kamera. Resolusi yang dihasilkan oleh kamera HP ASUS ROG Phone 7 Ultimate adalah Full HD.</string>
    <string name="msi_katana_gf66"><![CDATA[<<<<<< MSI KATANA GF66]]></string>
    <string name="sony_ps3_slim_cfw_playstation_3_game_console_500gb">SONY PS3 Slim CFW Playstation 3 Game Console 500GB</string>
    <string name="harga_rp1_640_000">Harga Rp1.640.000</string>
    <string name="sony_playstation_3_slim_firmware_cfw_support_dengan_harddisk_eksternal_up_to_2_terabite_dan_support_all_playstation_3_games_dilengkapi_kapasitas_hard_disk_internal_sebesar_500gb_dan_kabel_hdmi_set_termasuk_1_ps3_slim_500gb_2_stik_wireless_controller_original_1_kabel_hdmi_1_usb_charger_1_kabel_power_0">Sony PlayStation 3 Slim Firmware CFW Support dengan harddisk eksternal up to 2 Terabite dan support all PlayStation 3 games Dilengkapi kapasitas hard disk internal sebesar 500GB dan kabel HDMI Set termasuk : 1 PS3 Slim 500GB,2 Stik Wireless Controller Original, , 1 Kabel HDMI, 1 USB Charger, 1 Kabel Power 0</string>
    <string name="ps5_playstation5_slim_fat_disc_digital_version">PS5 Playstation5 Slim / Fat | Disc / Digital Version</string>
    <string name="harga_rp7_199_000">Harga Rp7.199.000</string>
    <string name="spesifikasi_cpu_8x_8x_zen_2_cores_at_3_5_ghz_gpu_10_28_tflops_36_cus_at_2_23_ghz_gpu_architecture_custom_rdna_2_memory_interface_16_gb_gddr6_256_bit_memory_bandwidth_448_gbps_internal_storage_custom_825_gb_ssd_io_throughput_5_56_gbps_raw_typical_8_9_gbps_expendable_storage_nvme_ssd_slot_optical_drive_4k_uhd_blu_ray_drive_isi_dalam_dus_1x_playstation_5_console_disc_version_1x_dualsense_wireless_controller_ps5_1x_usb_charging_cable_1x_hdmi_cable_1x_ac_power_cord">Spesifikasi : CPU : 8x 8x Zen 2 Cores at 3.5 GHz GPU : 10.28 TFLOPs, 36 CUs at 2.23 GHz GPU Architecture : Custom RDNA 2 Memory/Interface : 16 GB GDDR6/256-bit Memory Bandwidth : 448 Gbps Internal Storage Custom : 825 GB SSD IO Throughput : 5.56 Gbps (Raw), Typical 8-9 Gbps Expendable Storage : NVMe SSD Slot Optical Drive : 4K UHD Blu-ray Drive isi dalam dus : 1x PlayStation 5 Console Disc Version 1x Dualsense Wireless Controller PS5 1x USB Charging Cable 1x HDMI cable 1x AC power cord</string>
    <string name="harga_rp2_299_000">Harga Rp2.299.000</string>
    <string name="_100_original_100_works_100_on_time_delivery_bisa_online_offline_bisa_pakai_kaset_digital_bukan_hen_refurbished_bonus_games_bisa_online_fullset_terdiri_dari_1_x_playstation_4_slim_500_gb_cuh_20xx_21xx_22xx_1_2_x_dualshock_4_wireless_controller_1_x_kabel_micro_usb_1_x_kabel_power_1_x_kabel_hdmi_1_x_box_fullset">100 % ORIGINAL 100 % WORKS 100 % ON TIME DELIVERY * Bisa Online / Offline * Bisa Pakai Kaset / Digital * BUKAN HEN / REFURBISHED * Bonus Games Bisa Online Fullset, Terdiri dari : 1 x Playstation 4 Slim 500 GB CUH- 20XX / 21XX / 22xx 1 - 2 x DUALSHOCK 4 wireless controller 1 x Kabel Micro USB 1 x Kabel Power 1 x Kabel HDMI 1 x Box Fullset</string>
    <string name="tampilanlaptop">tampilanlaptop</string>
    <string name="tampilanps">tampilanps</string>
    <string name="tampilanhp">tampilanhp</string>
    <string name="tampilanbtnshare">tampilanbtnshare</string>
    <string name="tampilanbtnasus">tampilanbtnasus</string>
    <string name="tampilanbtnlenovo">tampilanbtnlenovo</string>
    <string name="tampilanbtnmacbook">tampilanbtnmacbook</string>
    <string name="tampilanbtnacer">tampilanbtnacer</string>
    <string name="tampilanbtnmsi">tampilanbtnmsi</string>
    <string name="tampilanbtnxbox">tampilanbtnxbox</string>
    <string name="tampilanbtnps2">tampilanbtnps2</string>
    <string name="tampilanbtnps3">tampilanbtnps3</string>
    <string name="tampilanbtnps4">tampilanbtnps4</string>
    <string name="tampilanbtnps5">tampilanbtnps5</string>
    <string name="x_box"><![CDATA[<<<<<< X-Box]]></string>
    <string name="tampilanbtnrog">tampilanbtnrog</string>
    <string name="tampilanbtnbs">tampilanbtnbs</string>
    <string name="tampilanbtnip">tampilanbtnip</string>
    <string name="tampilanbtnsamsung">tampilanbtnsamsung</string>
    <string name="tampilanbtnrealme">tampilanbtnrealme</string>
    <string name="sony_ps4_slim_500_gb_playstation_4_hits_bundle_games">SONY PS4 Slim 500 GB Playstation 4 Hits Bundle Games</string>
</resources>