<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PS">

    <TextView
        android:id="@+id/tvtext4"
        android:text="@string/select_the_playstation_you_want"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="#091763"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/btnxbox"
        android:layout_below="@+id/tvtext4"
        android:background="@drawable/ic_xbox"
        android:contentDescription="@string/tampilanbtnxbox"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnps2"
        android:layout_below="@+id/btnxbox"
        android:background="@drawable/ic_ps2"
        android:contentDescription="@string/tampilanbtnps2"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnps3"
        android:layout_below="@+id/btnps2"
        android:background="@drawable/ic_ps3"
        android:contentDescription="@string/tampilanbtnps3"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnps4"
        android:layout_below="@+id/btnps3"
        android:background="@drawable/ic_ps4"
        android:contentDescription="@string/tampilanbtnps4"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnps5"
        android:layout_below="@+id/btnps4"
        android:background="@drawable/ic_ps5"
        android:contentDescription="@string/tampilanbtnps5"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <TextView
        android:id="@+id/tvxbox"
        android:text="@string/x_box"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvtext4"
        android:layout_marginTop="60dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvps2"
        android:text="@string/playstation_2"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvxbox"
        android:layout_marginTop="110dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvps3"
        android:text="@string/playstation_3"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvps2"
        android:layout_marginTop="100dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvps4"
        android:text="@string/playstation_4"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvps3"
        android:layout_marginTop="100dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ps5"
        android:text="@string/playstation_5"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvps4"
        android:layout_marginTop="100dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>