<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".handphone">

    <TextView
        android:id="@+id/tvtext2"
        android:text="@string/select_the_phone_you_want1"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="#091763"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvsamsung"
        android:text="@string/samsung1"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvtext2"
        android:layout_marginTop="60dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvip"
        android:text="@string/iphone1"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvsamsung"
        android:layout_marginTop="110dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvbs"
        android:text="@string/blackshark1"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvip"
        android:layout_marginTop="110dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvrog"
        android:text="@string/rog1"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvbs"
        android:layout_marginTop="110dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvrealme"
        android:text="@string/realme1"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvrog"
        android:layout_marginTop="110dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/btnsamsung"
        android:layout_below="@+id/tvtext2"
        android:background="@drawable/ic_samsungzflip"
        android:contentDescription="@string/tampilanbtnsamsung"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnip"
        android:layout_below="@+id/btnsamsung"
        android:background="@drawable/ic_iphone15"
        android:contentDescription="@string/tampilanbtnip"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnbs"
        android:layout_below="@+id/btnip"
        android:background="@drawable/ic_blackshark"
        android:contentDescription="@string/tampilanbtnbs"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnrog"
        android:layout_below="@+id/btnbs"
        android:background="@drawable/ic_rog7"
        android:contentDescription="@string/tampilanbtnrog"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <ImageButton
        android:id="@+id/btnrealme"
        android:layout_below="@+id/btnrog"
        android:background="@drawable/ic_realme11"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/tampilanbtnrealme"
        android:layout_width="100dp"
        android:layout_height="90dp"/>

</RelativeLayout>