<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".laptop">

    <TextView
        android:id="@+id/tvtext3"
        android:text="@string/select_the_laptop_you_want"
        android:textSize="28dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="#091763"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/btnasus"
        android:layout_below="@+id/tvtext3"
        android:background="@drawable/ic_asustufdash15"
        android:contentDescription="@string/tampilanbtnasus"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <TextView
        android:id="@+id/tvasus"
        android:text="@string/asus_tuf_dash151"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvtext3"
        android:layout_marginTop="60dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/btnlenovo"
        android:layout_below="@+id/btnasus"
        android:background="@drawable/ic_lenovolegion"
        android:contentDescription="@string/tampilanbtnlenovo"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <TextView
        android:id="@+id/tvlenovo"
        android:text="@string/lenovo_legion"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvasus"
        android:layout_marginTop="100dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/btnmacbook"
        android:layout_below="@+id/btnlenovo"
        android:background="@drawable/ic_macbookpro"
        android:contentDescription="@string/tampilanbtnmacbook"
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <TextView
        android:id="@+id/tvmacbook"
        android:text="@string/macbook_pro_13"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvlenovo"
        android:layout_marginTop="100dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:id="@+id/btnacer"
        android:background="@drawable/ic_acernitro5"
        android:layout_below="@+id/tvmacbook"
        android:contentDescription="@string/tampilanbtnacer"
        android:layout_marginTop="60dp"
        android:layout_width="100dp"
        android:layout_height="90dp"
         />

    <TextView
        android:id="@+id/tvacer"
        android:text="@string/acer_nitro5"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvmacbook"
        android:layout_marginTop="100dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/btnmsi"
        android:layout_below="@+id/tvacer"
        android:contentDescription="@string/tampilanbtnmsi"
        android:background="@drawable/ic_msikatana"
        android:layout_marginTop="80dp"
        android:layout_width="100dp"
        android:layout_height="90dp"/>
    <TextView
        android:id="@+id/tvmsi"
        android:text="@string/msi_katana_gf66"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/tvacer"
        android:layout_marginTop="110dp"
        android:textColor="#091763"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>