<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/welcome_electronic_area"
        android:id="@+id/tvelectronic"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#06477A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageButton
        android:id="@+id/btnlogohp"
        android:layout_below="@+id/tvelectronic"
        android:layout_marginTop="80dp"
        android:background="@drawable/ic_logohp"
        android:contentDescription="@string/tampilanhp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"/>
    <ImageButton
        android:id="@+id/btnlogolaptop"
        android:layout_below="@+id/btnlogohp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/tampilanlaptop"
        android:background="@drawable/ic_laptop"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="150dp"/>
    <ImageButton
        android:id="@+id/btnllogops"
        android:layout_below="@+id/btnlogolaptop"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_logoplaystation"
        android:contentDescription="@string/tampilanps"
        android:layout_centerInParent="true"
        android:layout_width="150dp"
        android:layout_height="100dp"/>

</RelativeLayout>