<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ps3">
    <ImageView
        android:id="@+id/ps"
        android:background="@drawable/ic_ps3"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="190dp"/>
    <TextView
        android:id="@+id/ps11"
        android:text="@string/sony_ps3_slim_cfw_playstation_3_game_console_500gb"
        android:layout_below="@+id/ps22"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:id="@+id/ps22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ps"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/harga_rp1_640_000"
        android:textColor="#3F51B5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ps33"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ps11"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="9dp"
        android:text="@string/sony_playstation_3_slim_firmware_cfw_support_dengan_harddisk_eksternal_up_to_2_terabite_dan_support_all_playstation_3_games_dilengkapi_kapasitas_hard_disk_internal_sebesar_500gb_dan_kabel_hdmi_set_termasuk_1_ps3_slim_500gb_2_stik_wireless_controller_original_1_kabel_hdmi_1_usb_charger_1_kabel_power_0"/>

    <ImageButton
        android:id="@+id/btnshare"
        android:background="@drawable/ic_share"
        android:layout_below="@+id/ps33"
        android:contentDescription="@string/tampilanbtnshare"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="300dp"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

</RelativeLayout>